<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:orientation="vertical"
    android:weightSum="7">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/main_screen_font"
            android:gravity="center_vertical|end"
            android:padding="2dp"
            android:text="Level "
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/qNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/main_screen_font"
            android:gravity="center_vertical|start"
            android:padding="2dp"
            android:text="@string/defaultLevel"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/quesID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/ques"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="4dp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:padding="4dp"
                android:scaleType="centerInside"
                android:src="@drawable/lexus" />
        </androidx.cardview.widget.CardView>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical"
            android:padding="16dp">

            <RadioButton
                android:id="@+id/rb1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/one"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/defaultRb1"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rb2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/one"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/defaultRb2"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rb3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/one"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/defaultRb3"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rb4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/one"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/defaultRb4"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="bottom">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/maker"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>