<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="24dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/one"
                android:gravity="bottom"
                android:text="@string/choose"
                android:textColor="@color/black"
                android:textSize="50sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/one"
                android:gravity="top"
                android:text="@string/topic"
                android:textColor="@color/black"
                android:textSize="50sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/menu"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="6dp"
                android:scaleType="fitCenter"
                android:src="@drawable/info" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="4dp"
            android:paddingRight="16dp"
            android:paddingBottom="4dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cars"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp"
                app:contentPadding="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:weightSum="4">

                    <ImageView
                        android:layout_width="128dp"
                        android:layout_height="128dp"
                        android:layout_weight="1"
                        android:scaleType="centerInside"
                        android:src="@drawable/car1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:fontFamily="@font/main_screen_font"
                        android:gravity="center"
                        android:text="@string/cars"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold|italic" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/food"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp"
                app:contentPadding="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:weightSum="4">

                    <ImageView
                        android:layout_width="128dp"
                        android:layout_height="128dp"
                        android:layout_weight="1"
                        android:scaleType="centerInside"
                        android:src="@drawable/food" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:fontFamily="@font/main_screen_font"
                        android:gravity="center"
                        android:text="@string/food"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold|italic" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="4dp"
            android:paddingRight="16dp"
            android:paddingBottom="4dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/electric"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp"
                app:contentPadding="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:weightSum="4">

                    <ImageView
                        android:layout_width="128dp"
                        android:layout_height="128dp"
                        android:layout_weight="1"
                        android:scaleType="centerInside"
                        android:src="@drawable/electronics" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:fontFamily="@font/main_screen_font"
                        android:gravity="center"
                        android:text="@string/elctric"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold|italic" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/bikes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp"
                app:contentPadding="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:weightSum="4">

                    <ImageView
                        android:layout_width="128dp"
                        android:layout_height="128dp"
                        android:layout_weight="1"
                        android:scaleType="centerInside"
                        android:src="@drawable/bike" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:fontFamily="@font/main_screen_font"
                        android:gravity="center"
                        android:text="@string/bikes"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold|italic" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/maker"
        android:textColor="@color/black"
        android:textSize="12sp" />
</LinearLayout>